# brainfuck

./: CMakeLists.txt  Common.h  Compiler.cpp  Compiler.h  Executor.h  ExecutorAsm.h  LICENSE  Operand.h  Optimizer.h  README.md  build_and_run.sh  fast.asm  fastest.asm  interpreter_with_compiler.asm  main.cpp
core/: BracketMap.h  CMakeLists.txt  Common.h  Compiler.cpp  Compiler.h  Executor.cpp  Executor.h  ExecutorAsm.cpp  ExecutorAsm.h  Operand.h  Optimizer.cpp  Optimizer.h
examples/: lost-kingdom.bf
nasm_experiments/: build_and_run.sh  fast.asm  interpreter.asm  interpreter_with_codegen.asm
operand_writer/: CMakeLists.txt  OperandWriter.h  operand_writer.asm
tests/: CMakeLists.txt  IntegrationTest.cpp  OptimizerTest.cpp
tests/core/: CMakeLists.txt  ExecutorAsmTest.cpp  IntegrationTest.cpp  OptimizerTest.cpp
tests/operand_writer/: CMakeLists.txt  OperandWriterTest.cpp  OptimizerTest.cpp
